test-cases/final-dump/ho_resources_no_bang.wybe
def foo() use !io {
    pass
}

?f = foo
f
